add basic texture test

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -2,10 +2,12 @@ set(GFX_TESTCASE_HEADER
     ${COCOS_ROOT_PATH}/tests/TestBase.h
     ${COCOS_ROOT_PATH}/tests/ClearScreenTest.h
     ${COCOS_ROOT_PATH}/tests/BasicTriangleTest.h
+    ${COCOS_ROOT_PATH}/tests/BasicTextureTest.h
 )
 
 set(GFX_TESTCASE_SOURCE
     ${COCOS_ROOT_PATH}/tests/TestBase.cpp
     ${COCOS_ROOT_PATH}/tests/ClearScreenTest.cc
     ${COCOS_ROOT_PATH}/tests/BasicTriangleTest.cc
+    ${COCOS_ROOT_PATH}/tests/BasicTextureTest.cc
 )
