--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -97,7 +97,7 @@ elseif(APPLE)
 		set(CMAKE_SYSTEM_NAME iOS)
 		set(CMAKE_OSX_SYSROOT iphoneos)
 		set(CMAKE_IOS_INSTALL_COMBINED 1)
-		#set(CMAKE_OSX_ARCHITECTURES "arm64;x86_64")
+		set(CMAKE_OSX_ARCHITECTURES "arm64;x86_64")
 	else()
 		set(COCOS_PLATFORM_OSX TRUE)
 		#set(CMAKE_OSX_ARCHITECTURES "arm64;x86_64")
@@ -119,6 +119,8 @@ elseif(APPLE)
 	# need to set some flags directly as Xcode attributes
 	set(CMAKE_XCODE_ATTRIBUTE_CLANG_CXX_LANGUAGE_STANDARD "c++14")
 	set(CMAKE_XCODE_ATTRIBUTE_CLANG_CXX_LIBRARY "libc++")
+
+	set(CMAKE_XCODE_ATTRIBUTE_ENABLE_BITCODE "NO") 
 
 	# disable ARC
 	set(CMAKE_XCODE_ATTRIBUTE_CLANG_ENABLE_OBJC_ARC "NO")
