texture test works on windows

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,7 +44,7 @@ if(MSVC)
 	elseif(WIN32)
 		set(COCOS_PLATFORM_WIN32 TRUE)
 		message(STATUS "Platform: Win32")
-		
+		set(COCOS_UNICODE TRUE)
 		# compiler building setting
 		# Flags used by the compiler during all build types.
 		set(CMAKE_CXX_FLAGS "/DWIN32 /D_WINDOWS /W4 /wd4819 /wd4100 /wd4201 /wd4127 /Zm256 /EHsc /GR- /fp:fast")
