--- a/src/android/app/build.gradle
+++ b/src/android/app/build.gradle
@@ -38,6 +38,31 @@ android {
             path "../../../CMakeLists.txt"
         }
     }
+    sourceSets.main {
+        java.srcDir "src/main/cpp"
+        res.srcDir "src/main/res"
+        manifest.srcFile "src/main/AndroidManifest.xml"
+        assets.srcDir "../../Resources"
+    }
+}
+
+android.applicationVariants.all { variant ->
+    def project_root_folder = "${projectDir}/../.."
+    def dest_assets_folder = "${projectDir}/assets"
+
+    // delete previous files first
+    delete dest_assets_folder
+    def targetName = variant.name.capitalize()
+    def copyTaskName = "copy${targetName}ResourcesToAssets"
+    
+    tasks.register(copyTaskName) {
+        copy {
+            from "${buildDir}/../../../Resources"
+            into "${buildDir}/intermediates/assets/${variant.dirName}"
+            exclude "**/*.gz"
+        }
+    }
+    tasks.getByName("pre${targetName}Build").dependsOn copyTaskName
 }
 
 dependencies {
