--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -180,13 +180,4 @@ foreach(TARGET ${COCOS_EXTERNAL_TARGETS})
 endforeach()
 
 add_subdirectory("cocos2d-x-lite/cocos/renderer")
-
-if(WIN32)
-    add_subdirectory(src/win)
-elseif(IOS)
-	add_subdirectory(src/ios)
-elseif(ANDROID)
-	add_subdirectory(src/android/app/src/main/cpp)
-elseif(APPLE)
-    add_subdirectory(src/mac)
-endif()
+add_subdirectory(src)
