--- a/src/ios/CMakeLists.txt
+++ b/src/ios/CMakeLists.txt
@@ -25,10 +25,6 @@ file(GLOB_RECURSE SOURCE_CPP_FILES *.cpp *.cc)
 file(GLOB_RECURSE SOURCE_C_FILES *.c)
 file(GLOB_RECURSE SOURCE_MM_FILES *.m *.mm)
 
-set(APP_UI_RES
-    ${CMAKE_CURRENT_LIST_DIR}/../Resources/uv_checker_01.jpg
-)
-
 set(ALL_FILES 
     ${HEADER_FILES} 
     ${SOURCE_CPP_FILES} 
@@ -44,6 +40,7 @@ set(ALL_FILES
     ${CC_MATH_SOURCES}
     ${CC_EXTERNAL_SROUCES}
     ${cc_common_res}
+    ${CC_DEVICE_SOURCES}
     ${COCOS_SRC_PATH}/cocos2d.h
     ${COCOS_SRC_PATH}/cocos2d.cpp
     )
@@ -56,20 +53,6 @@ add_executable(${APP_NAME} ${ALL_FILES})
 
 set_target_properties(${APP_NAME} PROPERTIES RESOURCE "${APP_UI_RES}")
 set_xcode_property(${APP_NAME} INFOPLIST_FILE ${CMAKE_CURRENT_SOURCE_DIR}/Info.plist)
-
-# Locate system libraries on iOS
-find_library(UIKIT_LIBRARY UIKit)
-find_library(OPENGLES_LIBRARY OpenGLES)
-find_library(QUARTZCORE_LIBRARY QuartzCore)
-find_library(METAL_LIBRARY Metal)
-find_library(METALKIT_LIBRARY MetalKit)
-list(APPEND PLATFORM_SPECIFIC_LIBS
-     ${UIKIT_LIBRARY}
-     ${OPENGLES_LIBRARY}
-     ${QUARTZCORE_LIBRARY}
-     ${METAL_LIBRARY}
-     ${METAL_KIT}
-)
 
 target_link_libraries(${APP_NAME} 
     ${PLATFORM_SPECIFIC_LIBS} 
@@ -86,6 +69,7 @@ target_include_directories(${APP_NAME} PUBLIC
     ${COCOS_EXTERNAL_PATH}/sources
     ${CC_EXTERNAL_INCLUDES}
     ${CC_EXTERNAL_INCLUDES}/v8
+    ${DEVICE_INCLUDE_PATH}
 )
 
 if(MACOSX)
@@ -101,6 +85,7 @@ source_group(TREE ${COCOS_SRC_PATH}/base PREFIX "Source Files/base" FILES ${CC_B
 source_group(TREE ${COCOS_SRC_PATH}/math PREFIX "Header Files/math" FILES ${CC_MATH_HEADERS})
 source_group(TREE ${COCOS_SRC_PATH}/math PREFIX "Source Files/math" FILES ${CC_MATH_SOURCES})
 source_group(TREE ${COCOS_EXTERNAL_PATH}/sources PREFIX "Header Files/external" FILES ${CC_EXTERNAL_SROUCES})
+source_group(TREE ${COCOS_ROOT_PATH}/src/device PREFIX "Header Files/device" FILES ${CC_DEVICE_SOURCES})
 
 # setup default flags
 target_compile_definitions(${APP_NAME} PUBLIC 
