--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -4,6 +4,7 @@ set(GFX_TESTCASE_HEADER
     ${COCOS_ROOT_PATH}/tests/BasicTriangleTest.h
     ${COCOS_ROOT_PATH}/tests/BasicTextureTest.h
     ${COCOS_ROOT_PATH}/tests/DepthTest.h
+    ${COCOS_ROOT_PATH}/tests/StencilTest.h
     ${COCOS_ROOT_PATH}/tests/BunnyData.h
 )
 
@@ -13,6 +14,7 @@ set(GFX_TESTCASE_SOURCE
     ${COCOS_ROOT_PATH}/tests/BasicTriangleTest.cc
     ${COCOS_ROOT_PATH}/tests/BasicTextureTest.cc
     ${COCOS_ROOT_PATH}/tests/DepthTest.cc
+    ${COCOS_ROOT_PATH}/tests/StencilTest.cc
 )
 
 if(APPLE AND NOT IOS)
