add particle test

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -6,6 +6,8 @@ set(GFX_TESTCASE_HEADER
     ${COCOS_ROOT_PATH}/tests/DepthTest.h
     ${COCOS_ROOT_PATH}/tests/StencilTest.h
     ${COCOS_ROOT_PATH}/tests/BunnyData.h
+    ${COCOS_ROOT_PATH}/tests/ParticleTest.h
+    
 )
 
 set(GFX_TESTCASE_SOURCE
@@ -15,6 +17,7 @@ set(GFX_TESTCASE_SOURCE
     ${COCOS_ROOT_PATH}/tests/BasicTextureTest.cc
     ${COCOS_ROOT_PATH}/tests/DepthTest.cc
     ${COCOS_ROOT_PATH}/tests/StencilTest.cc
+    ${COCOS_ROOT_PATH}/tests/ParticleTest.cc
 )
 
 if(APPLE AND NOT IOS)
