--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -7,7 +7,7 @@ set(GFX_TESTCASE_HEADER
     ${COCOS_ROOT_PATH}/tests/StencilTest.h
     ${COCOS_ROOT_PATH}/tests/BunnyData.h
     ${COCOS_ROOT_PATH}/tests/ParticleTest.h
-    
+    ${COCOS_ROOT_PATH}/tests/BunnyTest.h
 )
 
 set(GFX_TESTCASE_SOURCE
@@ -18,4 +18,5 @@ set(GFX_TESTCASE_SOURCE
     ${COCOS_ROOT_PATH}/tests/DepthTest.cc
     ${COCOS_ROOT_PATH}/tests/StencilTest.cc
     ${COCOS_ROOT_PATH}/tests/ParticleTest.cc
+    ${COCOS_ROOT_PATH}/tests/BunnyTest.cc
 )
